<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign_In_activity"
    android:orientation="vertical"
    android:weightSum="6"
    android:background="@drawable/gradient1">

    <LinearLayout
        android:layout_weight="0.75"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        >

        <TextView
            android:layout_weight="0.75"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/login"
            android:textSize="40sp"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:gravity="center"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        >

        <EditText
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/email"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textAlignment="viewStart"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#FFFFFF"
            android:layout_marginBottom="10dp"
            android:id="@+id/userName"
            android:inputType="textEmailAddress"
            android:autofillHints=""
            />

        <EditText
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/passWord"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColorHint="#FFFFFF"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textAlignment="viewStart"
            android:padding="10dp"
            android:id="@+id/passWord"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:importantForAutofill="no"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="20dp"
        >

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/signIn"
            android:textColor="#500EF1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:backgroundTint="#FFFFFF"
            android:id="@+id/signInButton"
            tools:targetApi="lollipop"/>
    </LinearLayout>


    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        >

        <ProgressBar
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:id="@+id/progressBar"
            android:visibility="gone"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/message"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:layout_marginTop="15sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingEnd="70dp"
        android:paddingStart="80dp"
        android:gravity="center"
        >

        <Button
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="#FFFFFF"
            style="@style/Widget.AppCompat.Button.Colored"
            android:backgroundTint="#EC1431"
            android:id="@+id/signUpButton"
            />

    </LinearLayout>


</LinearLayout>